--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.724.0",
+    "@aws-sdk/lib-dynamodb": "^3.724.0",
+    "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "aws-cdk": "2.174.1",
+    "esbuild": "^0.24.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.174.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-amplify/auth-construct": "^1.5.1",
+    "@aws-sdk/client-dynamodb": "^3.724.0",
+    "@aws-sdk/client-sts": "^3.726.1",
+    "@aws-sdk/credential-providers": "^3.731.1",
+    "@aws-sdk/lib-dynamodb": "^3.724.0",
     "aws-cdk-lib": "2.174.1",
+    "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0"
   }
 }
